crates/pixi_global/src/project/snapshots/pixi_global__project__manifest__tests__remove_dependency.snap
---
source: src/global/project/manifest.rs
expression: manifest.document.to_string()
---
[envs.test-env]
channels = ["test-channel"]
dependencies = { "python" = "*"}
