crates/pixi_global/src/project/snapshots/pixi_global__project__manifest__tests__set_system_requirements.snap
---
source: crates/pixi_global/src/project/manifest.rs
assertion_line: 1213
expression: manifest.document.to_string()
---
[envs.test-env]
channels = ["conda-forge"]

[envs.test-env.system-requirements]
cuda = "11.0"
macos = "13.0"
libc = "2.17"
